--- a/aboutus.html
+++ b/aboutus.html
@@ -99,6 +99,120 @@
   </section>
   <!-- end of about us section -->
 
+  
+  <!-- Menu Section -->
+  <section class="menu" id="menu">
+
+    <article class="menu-image">   
+    </article>
+
+    <article class="menu-text">
+      <div class="menu-text-center">
+        <h1>Our Menu</h1>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore ma.</p>
+        <a href="#menu">Explore</a>
+      </div>
+    </article>
+  </section>
+  <!-- end of menu section -->
+
+  <!-- social icon -->
+  <section id="social-icons">
+    <a href="faebook.com"><i class="fab fa-facebook facebook"></i></a>
+    <a href="twitter.com"><i class="fab fa-twitter twitter"></i></a>
+    <a href="instagram.com"><i class="fab fa-instagram instagram"></i></a>
+    <a href="googleplus.com"><i class="fab fa-google-plus plus"></i></a>
+  </section>
+  <!-- end of social icon -->
+
+  <!-- number section -->
+  <section id="numbers">
+    <!-- start of the article -->
+    <article class="number">
+      <i class="fas fa-cloud-meatball"></i>
+      <p>50</p>
+      <h3>Meat Dishes</h3>
+    </article>
+    <article class="number">
+      <i class="fas fa-cheese"></i>
+      <p>35</p>
+      <h3>Cheese Dishes</h3>
+    </article>
+    <article class="number">
+      <i class="fas fa-pizza-slice"></i>
+      <p>25</p>
+      <h3>Pizzas</h3>
+    </article>
+    <article class="number">
+      <i class="fas fa-ice-cream"></i>
+      <p>50</p>
+      <h3>Desserts</h3>
+    </article>
+    <!-- end of the article -->
+  </section>
+  <!-- end of number -->
+
+  <!-- card section -->
+  <section id="food">
+    <div>
+      <h2 class="title-text">Food Fusion</h2>
+    </div>
+    <div class="food-container">
+      <!-- article 1 -->
+      <article class="food-card">
+        <img src="images/breakfast.jpg" class="food-img" alt="">
+        <div class="img-text">
+          <h1> Breakfast</h1>
+        </div>
+        <div class="img-footer">
+          <div class="footer-icon">
+            <i class="fas fa-dollar-sign">25</i>
+          </div>
+          <div class="footer-btn">
+            <button type="button" class="food-btn">Order Now</button>
+          </div>
+        </div>
+      </article>
+      <!-- end of article 1 -->
+
+       <!-- article 2 -->
+      <article class="food-card">
+        <img src="images/lunch.jpg" class="food-img" alt="image ayegi">
+        <div class="img-text">
+          <h1> Lunch</h1>
+        </div>
+        <div class="img-footer">
+          <div class="footer-icon">
+            <i class="fas fa-dollar-sign">35</i>
+          </div>
+          <div class="footer-btn">
+            <button type="button" class="food-btn">Order Now</button>
+          </div>
+        </div>
+      </article>
+      <!-- end of article 2 -->
+
+       <!-- article 3 -->
+      <article class="food-card">
+        <img src="images/dinner.jpg" class="food-img" alt="image ayegi">
+        <div class="img-text">
+          <h1> Dinner</h1>
+        </div>
+        <div class="img-footer">
+          <div class="footer-icon">
+            <i class="fas fa-dollar-sign">45</i>
+          </div>
+          <div class="footer-btn">
+            <button type="button" class="food-btn">Order Now</button>
+          </div>
+        </div>
+      </article>
+      <!-- end of article 3 -->
+    </div>
+  </section>
+  <!-- end of card section -->
+  
   <!-- footer -->
   <footer>
     <div class="center">
