--- a/booking.html
+++ b/booking.html
@@ -20,9 +20,9 @@
         </div>
         <ul>
             <li class="item"><a href="index.html">Home</a></li>
-            <li class="item"><a href="#services-container">Services</a></li>
-            <li class="item"><a href="#client-section">Our Clients</a></li>
-            <li class="item"><a href="#contact">Contact Us</a></li>
+            <li class="item"><a href="index.html#services-container">Services</a></li>
+            <li class="item"><a href="index.html#client-section">Our Clients</a></li>
+            <li class="item"><a href="index.html#contact">Contact Us</a></li>
             <li class="item"><a href="aboutus.html">About Us</a></li>
         </ul>
     </nav>
